[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "MetropolisMC"
version = "0.0.1"
description = "The Monte Carlo Simulation Packages Based on ASE"
readme = "README.md"
authors = [{ name = "LiuGaoyong", email = "liugaoyong_88@163.com" }]
requires-python = ">=3.10"
dependencies = [
    "ase",
    'loguru',
    'pydantic',
    "typing-extensions",
    "typer",             # CLI utils
]
[dependency-groups]
dev = [
    'vesin',       # fast neighbor search
    "ruff>=0.11",
    "pytest>=8.3",
]
[project.scripts]
mmc = "MetropolisMC:mmc_app"

# uv config
[tool.uv]
package = true
[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple" # TUNA
default = true

# pytest config
[tool.pytest.ini_options]
addopts = '--maxfail=1 -rf' # exit after 1 failures, report fail info
testpaths = ["tests"]
filterwarnings = [
    "error", # All other warnings are transformed into errors.
    # ignore the following warnings that matching a regex
]

# ruff config
[tool.ruff]
line-length = 80
indent-width = 4
select = ["F", "E", "W", "UP", "D"]
ignore = ["F722", 'D100']
[tool.ruff.pydocstyle]
convention = "google"
